--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.show-sql=true
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.context=DEBUG
+niagapulse.weather.key=${OPENWEATHER_KEY}
+niagapulse.ai.key=${KOLOSAL_AI_KEY}
+niagapulse.ai.model=Claude Sonnet 4.5
+niagapulse.ai.endpoint=https://api.kolosal.ai/v1/chat/completions
