--- a/pom.xml
+++ b/pom.xml
@@ -134,11 +134,12 @@
 			<artifactId>jts-core</artifactId>
 			<version>1.19.0</version>
 		</dependency>
-		<dependency>
+		<!-- Hibernate Spatial temporarily disabled due to version compatibility issues -->
+		<!-- <dependency>
 			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-spatial</artifactId>
-			<version>6.4.0.Final</version>
-		</dependency>
+			<version>6.6.1.Final</version>
+		</dependency> -->
 	</dependencies>
 
 	<build>
