--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgis/postgis:15-3.3
+    image: kartoza/postgis:18-3.6--v2025.11.24
     container_name: niagapulse_db
     restart: unless-stopped
     environment:
